k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trackerdb-deploy
  labels:
    app: trackerdb
spec:
  selector:
    matchLabels:
      app: trackerdb
  replicas: 1
  template:
    metadata:
      labels:
        app: trackerdb
    spec:
      containers:
      - name: trackerdb
        image: emacodes/trackerdb:v1.0.0
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: trackerdb-data
        ports:
        - name: trackerdb-port
          containerPort: 5432
      volumes:
        - name: trackerdb-data
          persistentVolumeClaim:
            claimName: db-pv-claim
