k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trackerdb
spec:
  ports:
  - port: 5432
    targetPort: trackerdb-port
    protocol: TCP
  selector:
    app: trackerdb
  type: ClusterIP
